--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,20 @@
         android:theme="@style/Theme.Propert"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".OnBoardPage.OnBoardPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".SigninAndLogin.SigninPage"
+            android:exported="true">
+        </activity>
     </application>
-
 </manifest>
